--- a/css/common.css
+++ b/css/common.css
@@ -5,5 +5,13 @@ img{
 body{
     width: 100%;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    
+}
+footer{
+    background-color: black;
+    text-align: center;
+    color: aliceblue;
 }
 
