--- a/css/common.css
+++ b/css/common.css
@@ -14,3 +14,10 @@ footer{
     text-align: center;
     color: aliceblue;
 }
+.nav-name{
+    color: blue;
+}
+
+.page-container{
+    padding: 24px;
+}
